--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5"
   }
 }
